added photos in the html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
 <body>
     <div id="main-container">
         <section class="step">
-            <img src="us.jpg" alt="Our Photo" class="hero-img">
             <h1>Hey! I have a question...</h1>
+        </section>
+
+        <section class="memories">
+            <h2>Our Special Moments 📸</h2>
+        <div class="scroll-container">
+            <div class="polaroid">
+                <img src="1.png" alt="Moment 1">
+                <p>First Time in Athens ❤️</p>
+            </div>
+            <div class="polaroid">
+                <img src="2.jpeg" alt="Moment 2">
+                <p>First Time in the beach ❤️</p>
+            </div>
+            <div class="polaroid">
+                <img src="3.jpeg" alt="Moment 3">
+                <p>First Birthday Celebration Together ❤️</p>
+            </div>
+        </div>
         </section>
 
         <section class="question-section">
