correct html file

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <h2>Our Special Moments 📸</h2>
         <div class="scroll-container">
             <div class="polaroid">
-                <img src="1.png" alt="Moment 1">
+                <img src="assets/1.png" alt="Moment 1">
                 <p>First Time in Athens ❤️</p>
             </div>
             <div class="polaroid">
-                <img src="2.jpeg" alt="Moment 2">
+                <img src="assets/2.jpeg" alt="Moment 2">
                 <p>First Time in the beach ❤️</p>
             </div>
             <div class="polaroid">
-                <img src="3.jpeg" alt="Moment 3">
+                <img src="assets/3.jpeg" alt="Moment 3">
                 <p>First Birthday Celebration Together ❤️</p>
             </div>
         </div>
