--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2>Our Special Moments 📸</h2>
         <div class="scroll-container">
             <div class="polaroid">
-                <img src="assets/1.png" alt="Moment 1">
+                <img src="assets/1.jpg" alt="Moment 1">
                 <p>First Time in Athens ❤️</p>
             </div>
             <div class="polaroid">
