small changes in the html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </section>
 
         <section class="memories">
-            <h2>Our Special Moments 📸</h2>
+            <h2>Because i want to continue to have special memories with you.. 📸</h2>
         <div class="scroll-container">
             <div class="polaroid">
                 <img src="assets/1.jpg" alt="Moment 1">
