many changes when she pressed yes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>For My Favorite Person</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
     <div id="main-container">
@@ -16,7 +18,7 @@
             <h2>Because i want to continue to have special memories with you.. 📸</h2>
         <div class="scroll-container">
             <div class="polaroid">
-                <img src="assets/1.jpg" alt="Moment 1">
+                <img src="assets/1.jpeg" alt="Moment 1">
                 <p>First Time in Athens ❤️</p>
             </div>
             <div class="polaroid">
